--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="color" id="color">
             </div>
             <div class="form-group">
-                <button type="button" id="btn">+ Create Content</button>
+                <button type="button" id="btn">+ Add Status</button>
             </div>
         </div>
     </div>
