--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <div id="app">
         <div class="form-container">
             <div class="form-group">
+                <label for="">Your Title</label>
                 <input type="text" placeholder="Title of your content">
             </div>
             <div class="form-group">
+                <label for="">Your Status</label>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Your Status"></textarea>
             </div>
             <div class="form-group">
