--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <input type="text" placeholder="Title of your content">
             </div>
             <div class="form-group">
-                <label for="">Your Status</label>
+                <label for="">Your Status: sdflsdkjflkjg</label>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Your Status"></textarea>
             </div>
             <div class="form-group">
