--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <button type="button" id="btn">+ Add Status</button>
             </div>
         </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic fuga iusto aliquid, fugit nam asperiores magnam amet?
+         Dolore perspiciatis ipsam vel accusamus recusandae dignissimos repudiandae natus, quasi itaque aliquid minima.</p>
     </div>
 </body>
 </html>
